--- a/trambleo/src/main/resources/org/example/trambleo/hello-loginpage.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-loginpage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerLoginPage">
+<VBox alignment="CENTER" prefHeight="720.0" prefWidth="1280.0" spacing="20.0" style="-fx-background-color: #E9EFFF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerLoginPage">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -25,16 +25,26 @@
    <VBox prefHeight="360.0" prefWidth="235.0">
       <children>
          <Label text="Adresse Email :" />
-         <TextField fx:id="emailLogin" promptText="Entrez votre e-mail" />
-         <Label text="Mot de passe :" />
-         <TextField fx:id="passwordLogin" promptText="Entrez votre mot de passe" />
-         <HBox prefHeight="100.0" prefWidth="235.0">
+         <TextField fx:id="emailLogin" maxWidth="500.0" prefHeight="26.0" prefWidth="500.0" promptText="Entrez votre e-mail" />
+         <Label text="Mot de passe :">
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin></Label>
+         <TextField fx:id="passwordLogin" maxWidth="500.0" promptText="Entrez votre mot de passe" />
+         <HBox alignment="CENTER_LEFT" prefHeight="67.0" prefWidth="1240.0">
             <children>
-               <Label text="Pas de compte ?" />
-               <Button mnemonicParsing="false" onMouseClicked="#onBoutonCreer1" text="Créer un compte" />
+               <Label prefHeight="42.0" prefWidth="89.0" text="Pas de compte ?" />
+               <Button mnemonicParsing="false" onMouseClicked="#onBoutonCreer1" style="-fx-background-color: #847CAE;" text="Créer un compte">
+                  <HBox.margin>
+                     <Insets left="20.0" />
+                  </HBox.margin></Button>
             </children>
+            <VBox.margin>
+               <Insets top="20.0" />
+            </VBox.margin>
          </HBox>
+         <Label fx:id="messageConfirmation" alignment="CENTER" prefHeight="265.0" prefWidth="512.0" />
       </children>
    </VBox>
-   <Button mnemonicParsing="false" onMouseClicked="#onBoutonConnecter1" text="Se connecter" />
+   <Button mnemonicParsing="false" onMouseClicked="#onBoutonConnecter1" style="-fx-background-color: #847CAE;" text="Se connecter" />
 </VBox>
