--- a/trambleo/src/main/resources/org/example/trambleo/hello-vueCalendrier.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-vueCalendrier.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerVueCalendrier">
    <fx:include source="hello-navbar.fxml" />
-   <children>
-      <Label prefHeight="775.0" prefWidth="1306.0" text="Vue calendrier">
-         <font>
-            <Font size="50.0" />
-         </font>
-      </Label>
-   </children>
+   <HBox prefHeight="100.0" prefWidth="200.0">
+      <children>
+         <Button onAction="#onVueKanbanBoutonClick" text="Vue Kanban"/>
+      </children>
+   </HBox>
 </VBox>
