--- a/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-navbar.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.layout.Region?>
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="1280.0" style="-fx-background-color: #847CAE;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerNavbar">
    <children>
-      <Label onMouseClicked="#onProjetButtonClick" prefHeight="66.0" prefWidth="202.0" text="Mes projets" textFill="WHITE">
+      <Label onMouseClicked="#onProjetButtonClick" prefHeight="184.0" prefWidth="316.0" text="Mes projets" textFill="WHITE">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
@@ -20,7 +19,15 @@
          </padding>
       </Label>
 
-      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" onMouseClicked="#onCompteButtonClick" prefHeight="66.0" prefWidth="1128.0" text="Mon compte" textFill="WHITE">
+      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" onMouseClicked="#onCompteButtonClick" prefHeight="90.0" prefWidth="1009.0" text="Mon compte" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+         <HBox.margin>
+            <Insets right="20.0" />
+         </HBox.margin>
+      </Label>
+      <Label onMouseClicked="#onDeconnexionButtonClick" prefHeight="72.0" prefWidth="344.0" text="Se déconnecter" textFill="WHITE">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
