--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -20,7 +20,7 @@
                   <Font name="System Bold" size="25.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" text="Créer un projet" />
+            <Button fx:id="boutonCreerProjet" mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" text="Créer un projet" />
          </children>
       </HBox>
       <HBox fx:id="carteProjet" prefHeight="638.0" prefWidth="1280.0" spacing="20.0">
