--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -3,7 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -23,13 +26,20 @@
             <Button fx:id="boutonCreerProjet" mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" text="Créer un projet" />
          </children>
       </HBox>
-      <HBox fx:id="carteProjet" prefHeight="638.0" prefWidth="1280.0" spacing="20.0">
-         <VBox.margin>
-            <Insets left="15.0" right="15.0" />
-         </VBox.margin>
-         <padding>
-            <Insets bottom="15.0" left="15.0" right="50.0" top="15.0" />
-         </padding>
-      </HBox>
+      <GridPane fx:id="carteProjet" prefHeight="500.0" prefWidth="950.0" hgap="10" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+         <columnConstraints>
+            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
+            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
+            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
+            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
+            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="100.0" prefHeight="150.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="100.0" prefHeight="150.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="100.0" prefHeight="150.0" vgrow="ALWAYS" />
+         </rowConstraints>
+      </GridPane>
+
    </children>
 </VBox>
