--- a/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-mesProjets.fxml
@@ -23,16 +23,16 @@
                   <Font name="System Bold" size="25.0" />
                </font>
             </Label>
-            <Button fx:id="boutonCreerProjet" mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" text="Créer un projet" />
+            <Button fx:id="boutonCreerProjet" mnemonicParsing="false" onAction="#onNouveauProjetButtonClick" style="-fx-background-color: #847CAE;" text="Créer un projet" />
          </children>
       </HBox>
-      <GridPane fx:id="carteProjet" prefHeight="500.0" prefWidth="950.0" hgap="10" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+      <GridPane fx:id="carteProjet" hgap="10" prefHeight="500.0" prefWidth="950.0" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
          <columnConstraints>
-            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
-            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
-            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
-            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
-            <ColumnConstraints minWidth="100.0" prefWidth="200.0" hgrow="ALWAYS" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="200.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="100.0" prefHeight="150.0" vgrow="ALWAYS" />
