--- a/trambleo/src/main/resources/org/example/trambleo/carteTache.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/carteTache.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerCarteTache">
    <children>
-      <HBox fx:id="carteTache" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+      <HBox fx:id="carteTache" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="150.0" style="-fx-background-color: #CFDFFB; -fx-background-radius: 30;">
          <children>
             <Label fx:id="nomTache" style="-fx-background-color: #CFDFFB;" text="nomTache">
                <HBox.margin>
