--- a/trambleo/src/main/resources/org/example/trambleo/infoTache.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/infoTache.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerInfoTache">
    <children>
       <HBox prefHeight="3.0" prefWidth="600.0">
          <children>
@@ -36,6 +36,9 @@
                </HBox.margin>
             </Label>
          </children>
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
       </HBox>
       <HBox prefHeight="3.0" prefWidth="600.0">
          <children>
@@ -50,6 +53,9 @@
                </HBox.margin>
             </Label>
          </children>
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
       </HBox>
       <HBox prefHeight="3.0" prefWidth="600.0">
          <children>
@@ -64,6 +70,9 @@
                </HBox.margin>
             </Label>
          </children>
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
       </HBox>
       <HBox prefHeight="3.0" prefWidth="600.0">
          <children>
@@ -77,6 +86,19 @@
                   <Insets left="20.0" />
                </HBox.margin>
             </Label>
+         </children>
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="302.0" prefWidth="600.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#onSupprimerTacheButton" style="-fx-background-color: #ea767c;" text="Supprimer le projet" />
+            <Button mnemonicParsing="false" onAction="#onModifierTacheButton" style="-fx-background-color: #847CAE;" text="Modifier le projet">
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
    </children>
