--- a/trambleo/src/main/resources/org/example/trambleo/infoTache.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/infoTache.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -84,17 +85,42 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label fx:id="listEmploye" text="listEmploye">
+         </children>
+         <VBox.margin>
+            <Insets left="15.0" top="15.0" />
+         </VBox.margin>
+      </HBox>
+      <HBox prefHeight="117.0" prefWidth="600.0">
+         <children>
+            <ListView fx:id="listEmploye" prefHeight="87.0" prefWidth="348.0">
                <HBox.margin>
-                  <Insets left="20.0" />
+                  <Insets left="15.0" />
                </HBox.margin>
+            </ListView>
+         </children>
+      </HBox>
+      <HBox prefHeight="3.0" prefWidth="600.0">
+         <children>
+            <Label text="Liste des commentaires">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
             </Label>
          </children>
          <VBox.margin>
             <Insets left="15.0" top="15.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="302.0" prefWidth="600.0">
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <ListView fx:id="listCommentaire" prefHeight="57.0" prefWidth="348.0">
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
+            </ListView>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="105.0" prefWidth="600.0">
          <children>
             <Button mnemonicParsing="false" onAction="#onSupprimerTacheButton" style="-fx-background-color: #ea767c;" text="Supprimer la tache" />
             <Button mnemonicParsing="false" onAction="#onAjouterCommentaireButton" style="-fx-background-color: #CFDFFB;" text="Ajouter commentaire">
