--- a/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <VBox prefHeight="720.0" prefWidth="1280.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerViewInpProject">
@@ -31,17 +30,9 @@
                <Insets left="5.0" />
             </HBox.margin>
          </Label>
-         <HBox prefHeight="65.0" prefWidth="200.0" style="-fx-background-color: #cfdffb;">
-            <children>
-               <Circle fill="DODGERBLUE" radius="23.0" stroke="BLACK" strokeType="INSIDE" />
-               <Circle fill="DODGERBLUE" radius="23.0" stroke="BLACK" strokeType="INSIDE">
-                  <HBox.margin>
-                     <Insets left="5.0" />
-                  </HBox.margin>
-               </Circle>
-            </children>
+         <HBox fx:id="employeEncart" alignment="CENTER_LEFT" prefHeight="82.0" prefWidth="635.0">
             <HBox.margin>
-               <Insets left="100.0" />
+               <Insets left="25.0" />
             </HBox.margin>
          </HBox>
          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
