--- a/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/viewInProject.fxml
@@ -30,7 +30,7 @@
                <Insets left="5.0" />
             </HBox.margin>
          </Label>
-         <HBox fx:id="employeEncart" alignment="CENTER_LEFT" prefHeight="82.0" prefWidth="635.0">
+         <HBox fx:id="employeEncart" alignment="CENTER_LEFT" prefHeight="82.0" prefWidth="390.0">
             <HBox.margin>
                <Insets left="25.0" />
             </HBox.margin>
@@ -43,7 +43,12 @@
                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onVueCalendrierButtonClick" style="-fx-background-color: #847CAE;" text="Vue calendrier" />
             </children>
          </HBox>
-         <Button mnemonicParsing="false" onAction="#onModifierProjetButtonClick" style="-fx-background-color: #847CAE;" text="Modifier le projet" />
+         <Button fx:id="modifierProjet" mnemonicParsing="false" onAction="#onModifierProjetButtonClick" style="-fx-background-color: #847CAE;" text="Modifier le projet" />
+         <Button fx:id="supprimerProjet" mnemonicParsing="false" onAction="#onSupprimerButtonClick" style="-fx-background-color: #FF0006;" text="Supprimer le projet">
+            <HBox.margin>
+               <Insets left="30.0" />
+            </HBox.margin>
+         </Button>
       </children>
    </HBox>
    <HBox prefHeight="414.0" prefWidth="1280.0">
