--- a/trambleo/src/main/resources/org/example/trambleo/carteTache.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/carteTache.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <VBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerCarteTache">
@@ -21,14 +22,19 @@
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </padding>
             </Label>
-            <Label fx:id="dateTache" text="dateTache">
+            <Label fx:id="dateTache" prefHeight="20.0" prefWidth="151.0" text="dateTache">
                <font>
                   <Font size="14.0" />
                </font>
                <HBox.margin>
-                  <Insets left="10.0" />
+                  <Insets left="75.0" />
                </HBox.margin>
             </Label>
+            <Circle fx:id="cercleStatut" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin>
+            </Circle>
          </children>
       </HBox>
    </children>
