--- a/trambleo/src/main/resources/org/example/trambleo/hello-editTask.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-editTask.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerEditTask">
+<VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" style="-fx-background-color: E9EFFF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.ControllerEditTask">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -21,14 +20,14 @@
       <font>
          <Font name="System Bold" size="13.0" />
       </font></Label>
-   <VBox prefHeight="200.0" prefWidth="100.0">
+   <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #;">
       <children>
          <Label text="Nom :" />
          <TextField fx:id="nomTache" promptText="Entrez le nom" />
          <Label text="Description :" />
          <TextField fx:id="descriptionTache" promptText="Entrez la description" />
          <Label prefHeight="18.0" prefWidth="54.0" text="Priorité :" />
-         <HBox prefHeight="100.0" prefWidth="200.0">
+         <HBox prefHeight="27.0" prefWidth="460.0">
             <children>
                <RadioButton mnemonicParsing="false" text="Faible">
                   <toggleGroup>
@@ -40,13 +39,11 @@
                      <Insets left="15.0" right="15.0" />
                   </HBox.margin>
                </RadioButton>
-               <RadioButton mnemonicParsing="false" text="Elevee" toggleGroup="$groupPriorite" />
+               <RadioButton mnemonicParsing="false" text="Elevée" toggleGroup="$groupPriorite" />
             </children>
          </HBox>
          <Label text="Date de fin:" />
          <DatePicker fx:id="dateFinTache" />
-         <Label text="Employés :" />
-         <ComboBox prefWidth="150.0" />
       </children>
    </VBox>
    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
