--- a/trambleo/src/main/resources/org/example/trambleo/hello-vueCalendrier.fxml
+++ b/trambleo/src/main/resources/org/example/trambleo/hello-vueCalendrier.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerVueCalendrier">
-   <fx:include source="hello-navbar.fxml" />
-   <HBox prefHeight="100.0" prefWidth="200.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.trambleo.HelloControllerVueCalendrier">
       <children>
-         <Button onAction="#onVueKanbanBoutonClick" text="Vue Kanban"/>
+         <fx:include source="hello-navbar.fxml" />
+         <HBox alignment="CENTER" layoutX="6.0" layoutY="72.0" prefHeight="18.0" prefWidth="1280.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#backOneMonth" text="&lt;" />
+            <Text fx:id="month" strokeType="OUTSIDE" strokeWidth="0.0" text="####">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="year" strokeType="OUTSIDE" strokeWidth="0.0" text="####">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Button mnemonicParsing="false" onAction="#forwardOneMonth" text="&gt;" />
+         </children>
+         </HBox>
+         <Button layoutX="164.0" layoutY="25.0" onAction="#onVueKanbanBoutonClick" text="Vue Kanban" />
+      <FlowPane fx:id="calendar" layoutY="133.0" prefHeight="573.0" prefWidth="1280.0" />
+      <Text layoutX="72.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dimanche" />
+      <Text layoutX="259.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lundi" />
+      <Text layoutX="420.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mardi" />
       </children>
-   </HBox>
-</VBox>
+</AnchorPane>
